# glass-compat-jax

./: setup.cfg
glass-compat-jax/: array.py  random.py
glass/compat/: _jax.py
glass/compat/jax/: __init__.py  array.py  healpix.py  random.py
glass_compat_jax/: __init__.py  healpix.py
