[metadata]
name = glass-compat-jax
version = 2023.3.dev0
maintainer = TBA
maintainer_email = TBA
description = JAX compatibility for GLASS
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/glass-dev/glass-compat-jax
project_urls =
    Documentation = https://glass.readthedocs.io/
    Issues = https://github.com/glass-dev/glass-compat-jax/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    jax
    #s2fft@git+https://github.com/astro-informatics/s2fft.git
packages = find_namespace:

[options.packages.find]
include = glass/compat/jax*

[options.extras_require]
test =
    pytest

[options.entry_points]
glass.array_namespaces =
    jax = glass.compat.jax:array_namespace

[flake8]
ignore = E226,E501,E741
